--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,13 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 monitor_speed = 115200
-lib_deps  =  
-    ESP Async WebServer
-    arduino-libraries/Arduino_JSON@^0.2.0
-    ayushsharma82/AsyncElegantOTA@^2.2.7
+lib_deps = 
+    me-no-dev/ESPAsyncWebServer@^1.2.4
+    bblanchon/ArduinoJson@^7.4.2
+    ayushsharma82/ElegantOTA@^3.1.7
     knolleary/PubSubClient@^2.8
     vintlabs/FauxmoESP@^3.4
 board_build.filesystem = littlefs
-build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
+build_flags = 
+    -D PIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
+    -D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
