--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+#9600 for AC
 monitor_speed = 115200
 lib_deps = 
     ESP32Async/ESPAsyncWebServer@^3.8.1
