--- a/platformio.ini
+++ b/platformio.ini
@@ -12,15 +12,14 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
-#9600 for AC
 monitor_speed = 115200
 lib_deps = 
     ESP32Async/ESPAsyncWebServer@^3.8.1
     bblanchon/ArduinoJson@^7.4.2
     ayushsharma82/ElegantOTA@^3.1.7
-    knolleary/PubSubClient@^2.8
     vintlabs/FauxmoESP@^3.4.1
 board_build.filesystem = littlefs
 build_flags = 
     -D PIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
     -D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
+    -D ASYNCWEBSERVER_REGEX
